# abc-cc-workshop

./: .gitignore
documents-skills-hands-on/: build_report.js  intelligence_report_DOLOR_SIT.docx  intelligence_report_sample_lorem_ipsum.md
gsd-shot-dashboard/: .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml
gsd-shot-dashboard/backend/: Dockerfile  alembic.ini  pyproject.toml
gsd-shot-dashboard/backend/alembic/: env.py
gsd-shot-dashboard/backend/alembic/versions/: 0001_init_users_sources.py  0002_signals_hypertable.py  0003_seed_rss_source.py
gsd-shot-dashboard/backend/src/: config.py  db.py  main.py  redis_client.py  worker.py
gsd-shot-dashboard/backend/src/api/: auth.py  signals.py  sources.py  stream.py
gsd-shot-dashboard/backend/src/auth/: dependencies.py  passwords.py  sessions.py
gsd-shot-dashboard/backend/src/cli/: create_user.py
gsd-shot-dashboard/backend/src/connectors/: base.py  registry.py  rss.py
gsd-shot-dashboard/backend/src/models/: feed_state.py  signal.py  source.py  user.py
gsd-shot-dashboard/backend/src/pipeline/: broadcaster.py  metrics.py  persister.py  publisher.py
gsd-shot-dashboard/backend/src/schemas/: signal.py
gsd-shot-dashboard/backend/tests/: conftest.py
gsd-shot-dashboard/backend/tests/integration/: test_auth_flow.py  test_pipeline_end_to_end.py  test_sse_stream.py
gsd-shot-dashboard/backend/tests/unit/: test_passwords.py  test_publisher.py  test_rss_connector.py  test_sessions.py  test_signal_schema.py
ocr-handson-h/: generate_docx.js  generate_pdf.py  generate_pptx.js  generate_xlsx.py  (+5 more)
(+127 files in other folders)
