[project]
name = "osint-backend"
version = "0.1.0"
description = "OSINT Shot Dashboard backend — RSS vertical slice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118,<0.130",
    "sse-starlette>=2.1,<3",
    "uvicorn[standard]>=0.32,<0.40",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "email-validator>=2.2,<3",
    "asyncpg>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.13,<2",
    "redis>=6.4,<7",
    "httpx>=0.27,<0.29",
    "feedparser>=6.0.12,<7",
    "apscheduler>=3.10,<4",
    "bcrypt>=4.2,<5",
    "passlib[bcrypt]>=1.7.4,<2",
    "itsdangerous>=2.2,<3",
    "python-multipart>=0.0.12",
    "psycopg2-binary>=2.9,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<0.29",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "testcontainers[postgres,redis]>=4.8,<5",
    "fakeredis>=2.25,<3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires Postgres + Redis (testcontainers)"]

[tool.mypy]
python_version = "3.12"
strict = true
